[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/images/ui/windowcommon/Panel.png" type="Texture" id=1]
[ext_resource path="res://src/component/theme/vscrollbar.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/ui/windowcommon/windowtitle1.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/ui/click1.wav" type="AudioStream" id=4]
[ext_resource path="res://src/component/buttons/Tab_Button1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/ui/windowcommon/277.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/UI/btn_group/skillbuy_tab_buttongroup.tres" type="ButtonGroup" id=7]
[ext_resource path="res://assets/images/ui/windowcommon/278.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/windowcommon/276.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/windowcommon/70.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/windowcommon/279.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/window_title_accessory/1.png" type="Texture" id=12]
[ext_resource path="res://src/component/buttons/Button1.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/scripts/UI/Skillbuy.gd" type="Script" id=14]
[ext_resource path="res://assets/sounds/ui/ambox_result.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/fonts/simsun.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/sounds/ui/click2.ogg" type="AudioStream" id=17]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=3]
resource_name = "learn"
tracks/0/type = "audio"
tracks/0/path = NodePath("Audio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "select"
length = 0.2
tracks/0/type = "audio"
tracks/0/path = NodePath("Audio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 17 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Skillbuy" type="Panel"]
margin_left = 77.0
margin_top = 80.0
margin_right = 368.0
margin_bottom = 466.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 217.5 ]
}

[node name="bg2" type="NinePatchRect" parent="."]
margin_left = 11.0
margin_top = 22.0
margin_right = 279.0
margin_bottom = 385.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="windowtitle" type="TextureRect" parent="."]
margin_right = 284.0
margin_bottom = 39.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="windowtitle"]
margin_left = 4.0
margin_top = 10.0
margin_right = 278.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "技能学习栏"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="t_acc" type="TextureRect" parent="."]
margin_left = 3.30763
margin_top = 6.92966
margin_right = 33.3076
margin_bottom = 36.9297
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeBtn" type="TextureButton" parent="."]
margin_left = 260.831
margin_top = 13.4486
margin_right = 276.831
margin_bottom = 29.4486
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab_Button1" parent="." instance=ExtResource( 5 )]
margin_left = 21.1037
margin_top = 47.247
margin_right = 69.1037
margin_bottom = 69.247
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 7 )
text = "波动"

[node name="Tab_Button2" parent="." instance=ExtResource( 5 )]
margin_left = 69.1305
margin_top = 47.247
margin_right = 117.13
margin_bottom = 69.247
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 7 )
text = "剑术"

[node name="Tab_Button3" parent="." instance=ExtResource( 5 )]
margin_left = 117.212
margin_top = 47.247
margin_right = 165.212
margin_bottom = 69.247
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 7 )
text = "血气"

[node name="Tab_Button4" parent="." instance=ExtResource( 5 )]
margin_left = 164.609
margin_top = 47.247
margin_right = 212.609
margin_bottom = 69.247
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 7 )
text = "鬼神"

[node name="Tab_Button5" parent="." instance=ExtResource( 5 )]
margin_left = 213.171
margin_top = 47.247
margin_right = 261.171
margin_bottom = 69.247
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 7 )
text = "通用"

[node name="line" type="NinePatchRect" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 272.0
margin_bottom = 72.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skillContainer" type="ScrollContainer" parent="."]
margin_left = 20.0
margin_top = 75.0
margin_right = 271.0
margin_bottom = 353.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="grid1" type="GridContainer" parent="skillContainer"]
custom_constants/vseparation = 1

[node name="grid2" type="GridContainer" parent="skillContainer"]
custom_constants/vseparation = 1

[node name="grid3" type="GridContainer" parent="skillContainer"]
custom_constants/vseparation = 1

[node name="grid4" type="GridContainer" parent="skillContainer"]
custom_constants/vseparation = 1

[node name="grid5" type="GridContainer" parent="skillContainer"]
custom_constants/vseparation = 1

[node name="learnBtn" parent="." instance=ExtResource( 13 )]
margin_left = 58.3268
margin_top = 352.796
margin_right = 135.327
margin_bottom = 375.796
text = "学习技能"

[node name="closeBtn2" parent="." instance=ExtResource( 13 )]
margin_left = 145.189
margin_top = 352.796
margin_right = 222.189
margin_bottom = 375.796
text = "关闭"

[node name="windowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/learn = SubResource( 3 )
anims/select = SubResource( 4 )

[connection signal="pressed" from="closeBtn" to="." method="_on_closeBtn_pressed"]
[connection signal="toggled" from="Tab_Button1" to="." method="_on_Tab_Button1_toggled"]
[connection signal="toggled" from="Tab_Button2" to="." method="_on_Tab_Button2_toggled"]
[connection signal="toggled" from="Tab_Button3" to="." method="_on_Tab_Button3_toggled"]
[connection signal="toggled" from="Tab_Button4" to="." method="_on_Tab_Button4_toggled"]
[connection signal="toggled" from="Tab_Button5" to="." method="_on_Tab_Button5_toggled"]
[connection signal="pressed" from="learnBtn" to="." method="_on_learnBtn_pressed"]
[connection signal="pressed" from="closeBtn2" to="." method="_on_closeBtn_pressed"]
